# metal-diffusion

./: README.md  converter.py  hf_utils.py  main.py  pr_comments.json  pyproject.toml  wan_converter.py
.github/workflows/: comfy.yml  publish.yml
comfyui_custom_nodes/: NODE_REFERENCE.md  README.md  __init__.py  advanced_nodes.py  converter_nodes.py  integrated_nodes.py  lora_nodes.py  node_list.json  nodes.py  requirements.txt  utils.py  vae_nodes.py  video_wrappers.py
comfyui_custom_nodes/example_workflows/: Alloy - Convert and Generate Pipeline.json  Alloy - Convert with LoRA Baking.json  Alloy - Flux Image to Image.json  Alloy - Flux Text to Image (All-in-One).json  Alloy - Flux Text to Image (Basic).json  Alloy - Flux with ControlNet.json  Alloy - Flux with CoreML VAE.json  Alloy - Hunyuan Video Generation.json  Alloy - LTX Video Generation.json  Alloy - Lumina Image 2.0.json  Alloy - Model Analysis Utility.json  Alloy - Quick Model Conversion.json  Alloy - Wan 2.1 Video Generation.json  README.md  convert_lora.json  flux_allinone.json  flux_txt2img.json  hunyuan_video.json  model_analysis.json
docs/: BENCHMARKS.md  COMPATIBILITY.md  PYPI_PUBLISHING.md  TROUBLESHOOTING.md
docs/plans/: two-phase-converter-refactoring.md
src/alloy/: cli.py  controlnet_converter.py  converter.py  exceptions.py  flux_converter.py  flux_runner.py  logging.py  monitor.py  progress.py  validation.py
src/alloy/converters/: base.py  controlnet.py  flux.py  hunyuan.py  hunyuan_workers.py  ltx.py  ltx_workers.py  lumina.py  lumina_workers.py  vae.py  wan.py  wan_workers.py  workers.py
src/alloy/runners/: __init__.py  base.py  core.py  flux.py  hunyuan.py  ltx.py  lumina.py  utils.py  wan.py
src/alloy/utils/: batch.py  coreml.py  errors.py  general.py  hf.py  model.py
src/alloy/workers/: __init__.py  base.py
src/metal_diffusion/: cli.py  converter.py  flux_converter.py  flux_runner.py  ltx_converter.py  ltx_runner.py  runner.py  wan_converter.py
tests/: conftest.py
tests/integration/: test_cli_auto_detect.py  test_conversion.py  test_flux2_runner.py  test_flux_conversion.py  test_flux_local.py  test_flux_runner.py  test_hunyuan_conversion.py  test_hunyuan_runner.py  test_ltx_conversion.py  test_ltx_runner.py  test_lumina_runner.py  test_single_file_support.py
tests/unit/: test_batch.py  test_cleanup.py  test_cli_args.py  test_comfy_nodes.py  test_controlnet_converter.py  test_converter_base.py  test_error_suggestions.py  test_flux_converter.py  test_general.py  test_hunyuan_converter.py  test_logging.py  test_ltx_converter.py  test_lumina_converter.py  test_model.py  test_monitor.py  test_progress.py  test_runner_base.py  test_validation.py  test_wan_converter.py  test_wan_utils.py  test_worker_base.py  test_workers.py
