[project]
name = "metal-diffusion"
version = "0.1.0"
description = "Convert diffusion models to Core ML on Apple Silicon"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "John Doe", email = "john@example.com"}
]
maintainers = [
    {name = "John Doe", email = "john@example.com"}
]
keywords = ["core-ml", "diffusion", "flux", "ltx-video", "apple-silicon", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/hybridindie/metal-diffusion"
Documentation = "https://github.com/hybridindie/metal-diffusion#readme"
Repository = "https://github.com/hybridindie/metal-diffusion"
Issues = "https://github.com/hybridindie/metal-diffusion/issues"
dependencies = [
    "torch==2.7.0",
    "coremltools>=8.0",
    "diffusers>=0.31.0",
    "transformers",
    "huggingface_hub",
    "numpy<2.0",
    "scipy",
    "accelerate",
    "safetensors",
    "sentencepiece",
    "pytest",
    "diffusionkit",
    "invisible-watermark",
    "matplotlib",
    "scikit-learn<1.6",
    "python-dotenv",
    "tqdm>=4.66.0",
    "rich>=13.0.0",
    "psutil>=5.9.0",
    "python-coreml-stable-diffusion @ git+https://github.com/apple/ml-stable-diffusion.git ; sys_platform == 'darwin'"
]

[project.scripts]
metal-diffusion = "metal_diffusion.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
# Ensure we use a compatible python version if system python is too old/new
[tool.uv]
python-preference = "managed"
override-dependencies = [
    "diffusers>=0.36.0",
    "huggingface-hub>=0.26.0,<1.0",
    "transformers>=4.46.0",
    "numpy<2.0"
]
environments = ["sys_platform == 'darwin'"]
