[project]
name = "metal-diffusion"
version = "0.1.0"
description = "Convert diffusion models to Core ML on Apple Silicon"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "John Doe", email = "john@example.com"}
]
maintainers = [
    {name = "John Doe", email = "john@example.com"}
]
keywords = ["core-ml", "diffusion", "flux", "ltx-video", "apple-silicon", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
dependencies = [
    "torch>=2.4.0",
    "diffusers[torch]>=0.30.0",
    "transformers>=4.44.0",
    "coremltools>=8.0",
    "huggingface-hub>=0.24.0",
    "safetensors>=0.4.0",
    "numpy<2.0.0",  # coremltools compatibility
    "scipy",
    "accelerate",
    "sentencepiece",
    "matplotlib",
    "scikit-learn",
    "python-dotenv",
    "python-coreml-stable-diffusion @ git+https://github.com/apple/ml-stable-diffusion.git@main",
    "tqdm",
    "rich",
    "psutil",
    "pyyaml"
]

[project.urls]
Homepage = "https://github.com/hybridindie/metal-diffusion"
Documentation = "https://github.com/hybridindie/metal-diffusion#readme"
Repository = "https://github.com/hybridindie/metal-diffusion"
Issues = "https://github.com/hybridindie/metal-diffusion/issues"

[project.scripts]
alloy = "alloy.cli:main"
metal-diffusion = "alloy.cli:main"  # Backwards compatibility

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
# Ensure we use a compatible python version if system python is too old/new
[tool.uv]
python-preference = "managed"
override-dependencies = [
    "diffusers>=0.36.0",
    "huggingface-hub>=0.26.0,<1.0",
    "transformers>=4.46.0",
    "numpy<2.0"
]
environments = ["sys_platform == 'darwin'"]
