[project]
name = "silicon-alloy"
version = "0.3.2"
description = "High-performance Core ML diffusion model converter"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "John Dilts", email = "john@hybridindie.com"}
]
maintainers = [
    {name = "John Dilts", email = "john@hybridindie.com"}
]
keywords = ["core-ml", "diffusion", "flux", "ltx-video", "apple-silicon", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "torch>=2.4.0,<2.8.0",  # coremltools tested up to 2.7.x
    "diffusers[torch]>=0.30.0",
    "transformers>=4.44.0",
    "coremltools>=8.0",
    "huggingface-hub>=0.24.0",
    "safetensors>=0.4.0",
    "numpy>=1.23.0,<2.0.0",  # coremltools compatibility
    "scipy>=1.10.0,<2.0.0",
    "accelerate>=0.20.0",
    "sentencepiece>=0.1.99",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.0.0,<1.5.2",  # coremltools max supported is 1.5.1
    "python-dotenv>=1.0.0",
    "tqdm>=4.65.0",
    "rich>=13.0.0",
    "psutil>=5.9.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Stable Diffusion support requires Apple's ml-stable-diffusion (not on PyPI)
# Install with: pip install "silicon-alloy[sd]" or manually install the dependency
sd = [
    "python-coreml-stable-diffusion @ git+https://github.com/apple/ml-stable-diffusion.git@e12202c1f6405b83918b58a5d097cd61e3e1f702"
]

[project.urls]
Homepage = "https://github.com/hybridindie/alloy"
Documentation = "https://github.com/hybridindie/alloy#readme"
Repository = "https://github.com/hybridindie/alloy"
Issues = "https://github.com/hybridindie/alloy/issues"

[project.scripts]
alloy = "alloy.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alloy"]

[tool.hatch.metadata]
allow-direct-references = true
# Ensure we use a compatible python version if system python is too old/new
[tool.uv]
python-preference = "managed"
override-dependencies = [
    "diffusers>=0.36.0",
    "huggingface-hub>=0.26.0,<1.0",
    "transformers>=4.46.0",
    "numpy<2.0"
]
environments = ["sys_platform == 'darwin'"]

# ComfyUI Registry - https://comfyregistry.org
[tool.comfy]
PublisherId = "hybridindie"
DisplayName = "Alloy - Core ML Accelerated Nodes"
Icon = ""
